[project]
name = "metodystochastyczne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "plotly>=6.6.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
